public abstract class Chest {

    //todo


    public abstract void collect_chest(Hero hero);
}
