public class CoinChest extends Chest{

    private int coins_number;

    CoinChest(int coins){
        coins_number = coins;
        //todo constructor

    }

    @Override
    public void collect_chest(Hero hero) {
        //todo
    }
}
