public class GreenOrc extends Orc{
    GreenOrc(){
        //todo constructor
    }
}
